# UAS-ALGORITMA-PEMROGRAMAN

./: .gitignore  CMakeLists.txt  README.md  inventory.cpp  inventory.h  scoremanager.cpp  test.cpp
data/: gacha_history.csv  gacha_pool.csv  inventory.csv  leaderboard.csv  market_history.csv  shop_history.csv  shop_items.csv  trade_history.csv  wallet.csv
docs/: PRD.md  laporan.docx  script-demo.md
qml/: GameOverScreen.qml  GameScreen.qml  LeaderboardScreen.qml  Main.qml  MainMenu.qml
src/: bullet.cpp  bullet.h  enemy.cpp  enemy.h  gacha.cpp  gacha.h  game.cpp  game.h  gameconfig.h  gamecontroller.cpp  gamecontroller.h  gamedata.h  gameexception.h  gameutils.h  inventory.cpp  inventory.h  main.cpp  player.cpp  player.h  scoremanager.cpp  scoremanager.h  shop.cpp  shop.h  trading.cpp  trading.h
tests/: .gitkeep
